[package]
name    = "pipeworkmc-webserver"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_parens = "allow"


[dependencies.pipeworkmc-db]
path = "../pipeworkmc-db"

[dependencies.smol]
version = "2.0"

[dependencies.tide]
version = "0.16"
[dependencies.tide-rustls]
version = "0.3"
[dependencies.tide-websockets]
version = "0.4"
[dependencies.maud]
version  = "0.27"
features = [ "tide" ]

[dependencies.surf]
version = "2.3"
[dependencies.urlencoding]
version = "2.1"

[dependencies.serde]
version = "1.0"

[dependencies.uuid]
version  = "1.17"
features = [ "serde" ]
[dependencies.rand]
version = "0.9"

[dependencies.image]
version = "0.25"
[dependencies.base64]
version = "0.22"

[dependencies.chrono]
version = "0.4"
